--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,11 +30,14 @@
 
   /* Corner radius */
   --radius: 1rem;
+
+  /* shadow */
+  --menu-shadow: 0px 0px 11px rgba(0, 0, 0, 0.08);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: var(--background);
+    --background: #ffffff;
     --foreground: #ededed;
   }
 }
@@ -56,5 +59,11 @@ body {
     font-family: var(--font-cta);
   }
 
+  .shadow-menu {
+    box-shadow: var(--menu-shadow);
+  }
 
+  .brand-bg-orange, .brand-text-orange {
+    color: var(--color-brand-orange);
+  }
 }
