--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,6 +33,7 @@
 
   /* shadow */
   --menu-shadow: 0px 0px 11px rgba(0, 0, 0, 0.08);
+  --text-shadow-heading: 0 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -59,11 +60,27 @@ body {
     font-family: var(--font-cta);
   }
 
+  .font-heading {
+    font-family: var(--font-heading);
+  }
+
   .shadow-menu {
     box-shadow: var(--menu-shadow);
   }
 
-  .brand-bg-orange, .brand-text-orange {
+  .text-shadow-heading {
+    text-shadow: var(--text-shadow-heading);
+  }
+
+  .brand-bg-orange {
+    background-color: var(--color-brand-orange);;
+  }
+
+  .brand-text-orange {
     color: var(--color-brand-orange);
+  }
+
+  .brand-bg-offwhite {
+    background-color: var(--off-white);
   }
 }
