--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,3 @@
-/* Font Imports */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Sora:wght@600;700;800;900&family=Space+Grotesk:wght@400;500&family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap');
-
-
 @import "tailwindcss";
 @tailwind utilities;
 
@@ -25,12 +21,6 @@
   --background: var(--color-white);
   --foreground: var(--color-black);
 
-  /* Typography */
-  --font-heading: 'Sora', sans-serif;
-  --font-body: 'Inter', sans-serif;
-  --font-cta: 'Space Grotesk', sans-serif;
-  --font-jakarta: 'Plus Jakarta Sans', sans-serif;
-
   /* Corner radius */
   --radius: 1rem;
 
@@ -50,7 +40,6 @@
 body {
   background-color: var(--background);
   color: var(--primary-text-color);
-  font-family: var(--font-body);
 }
 
 /* Example utility: use this in Tailwind via className="bg-texture-orange-overlay" */
@@ -61,17 +50,20 @@ body {
 @layer utilities {
   /* font family */
   .font-cta {
-    font-family: var(--font-cta);
+    font-family: var(--font-space-grotesk);
   }
 
   .font-heading {
-    font-family: var(--font-heading);
+    font-family: var(--font-sora);
   }
 
   .font-jakarta {
     font-family: var(--font-jakarta);
   }
 
+  .main-container {
+    font-family: var(--font-inter);
+  }
   /*  */
 
   .shadow-menu {
